# rag-hallucination-detection

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
configs/: MedHallu_experiment.yaml  default.yaml
scripts/: run_experiment.py
src/dataset_loaders/: base.py  halueval_loader.py
src/pipeline/: embeddings_generator.py  evaluator.py  sgi.py  threshold_tuner.py
src/sgi_eval/: __init__.py  config.py
src/sgi_eval/dataset_loaders/: __init__.py  base.py  halueval_loader.py  medhallu_loader.py
src/sgi_eval/pipeline/: __init__.py  embeddings_generator.py  evaluator.py  sgi.py  threshold_tuner.py
